[gd_scene load_steps=10 format=3 uid="uid://c1rdx6jk7oibd"]

[ext_resource type="Script" uid="uid://bx0bv6spxg62p" path="res://entity/door/door.gd" id="1_uigt1"]
[ext_resource type="TileSet" uid="uid://dah4dbx8ikesr" path="res://level/room/tileset_level.tres" id="2_pyfrd"]
[ext_resource type="Texture2D" uid="uid://cmdvti2y6w1q3" path="res://asset/sphere.png" id="3_blhnk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x71b1"]
size = Vector2(3, 63)

[sub_resource type="Gradient" id="Gradient_i7qj5"]
offsets = PackedFloat32Array(0.5322034)
colors = PackedColorArray(0.11764706, 0.05490196, 0.05490196, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_psa10"]
gradient = SubResource("Gradient_i7qj5")

[sub_resource type="Curve" id="Curve_psa10"]
_data = [Vector2(0, 0.696629), 0.0, 0.0, 0, 0, Vector2(1, 0.348315), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_2tyue"]
curve = SubResource("Curve_psa10")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xt1h0"]
lifetime_randomness = 0.1
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 20, 1)
angle_min = -385.7
angle_max = 352.5
spread = 0.0
flatness = 1.0
initial_velocity_min = 5.0
initial_velocity_max = 23.65
angular_velocity_min = -91.35
angular_velocity_max = 96.71
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_2tyue")
color_ramp = SubResource("GradientTexture1D_psa10")

[node name="DoorLeft" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_uigt1")

[node name="DoorLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray(0, 0, 0, 0, 254, 255, 5, 0, 4, 0, 17, 0, 0, 0, 0, 0, 255, 255, 5, 0, 4, 0, 18, 0, 0, 0, 0, 0, 0, 0, 5, 0, 4, 0, 18, 0, 0, 0, 0, 0, 2, 0, 5, 0, 4, 0, 19, 0, 0, 0, 0, 0, 1, 0, 5, 0, 4, 0, 18, 0, 0, 0)
tile_set = ExtResource("2_pyfrd")
navigation_enabled = false

[node name="AreaCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 6.5)
shape = SubResource("RectangleShape2D_x71b1")

[node name="OpenParticle" type="GPUParticles2D" parent="."]
position = Vector2(1, 10)
emitting = false
texture = ExtResource("3_blhnk")
process_material = SubResource("ParticleProcessMaterial_xt1h0")

[node name="DesiredPosition" type="Marker2D" parent="."]
z_index = 10

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
